# ecourts

./: .editorconfig  .gitattributes  .gitignore  CITATION.cff  README.md  case_type.csv  courts.csv  pyproject.toml  scrape.py  t.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml  docs.yml  publish.yml  test.yml
ecourts/: ecourt.py  storage.py
ecourts/cli/: __init__.py
ecourts/entities/: __init__.py  case_type.py  cause_list.py  court.py  hearing.py  objection.py  party.py
ecourts/parsers/: __init__.py  case_details.py  options.py
src/: __init__.py  __main__.py  captcha.py  court.py  courts.py  ecourt.py  entities.py  html_parser.py  scrape.py  storage.py
src/cli/: __init__.py
src/ecourts/: entities.py
src/entities/: __init__.py  act_type.py  business.py  case.py  case_type.py  court.py  fir.py  hearing.py  history_entry.py  objection.py  order.py  party.py
src/parsers/: __init__.py  __main__.py  case_details.py  cases.py  cause_lists.py  hearing_details.py  options.py  orders.py  utils.py
test/: test_api.py  test_captcha.py  test_ecourt.py  test_entities.py  test_parsers.py  test_scraper.py  test_storage.py
test/cassettes/test_ecourt/: test_api_calls.yaml  test_case_expander.yaml  test_case_history.yaml  test_get_act_type.yaml
test/cassettes/test_scraper/: test_get_court_order_types.yaml
test/fixtures/case_details/: GAHC04-000792-2024.yml  GAHC040007922024.html  GAHC040007922024.yml  HCBM060000522019.html  HCBM060000522019.yml  JKHC02-011375-2018.yml  JKHC020091782015.html  JKHC020091782015.yml  JKHC020113752018.html  JKHC020113752018.yml  KAHC01-033768-2024.yml  KAHC010337682024.html  KAHC010337682024.yml
test/fixtures/cases/: 01.txt  GAHC010225502018.yml  JKHC020000011990.yml  JKHC020000011998.yml  JKHC020000021998.yml  JKHC020000082003.yml  JKHC020000152024.yml  JKHC020000482024.yml  JKHC020000942001.yml  JKHC020001332024.yml  JKHC020002822024.yml  JKHC020002832024.yml  JKHC020004022024.yml  JKHC020004622024.yml  JKHC020005001990.yml  JKHC020005212019.yml  JKHC020005231990.yml  (+111 more)
(+4 files in other folders)
