[project]
name = "ecourts"
dependencies = [
    "requests~=2.31",
    "beautifulsoup4~=4.10",
    "opencv-python~=4.10.0",    
    "click~=8.1"
]
requires-python = ">=3.10"
description = ""
dynamic = ["version"]
[project.optional-dependencies]
dev = [
  "wat-inspector",
  "pytest-recording~=0.13",
  "pytest-cov"
]
test = [
  "pytest~=8.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "test"
]
[project.scripts]
get-case-types = "cli:get_case_types"

[tool.coverage.run]
source = ["src"]
