[project]
name = "ecourts"
dependencies = [
    "requests~=2.31",
    "beautifulsoup4~=4.10",
    "opencv-python~=4.10.0",    
    "click~=8.1"
]
requires-python = ">=3.10"
description = "ecourts is a information retrieval tool for Indian High Courts."
dynamic = ["version"]
[project.optional-dependencies]
dev = [
  "wat-inspector",
  "pytest-recording~=0.13",
]
doc = [
  "pdoc3~=0.11"
]
test = [
  "pytest~=8.3",
  "pytest-cov~=5.0",
  "PyYAML~=6.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "test"
]
[project.scripts]
ecourts = "cli:ecourts"

[tool.coverage.run]
source = ["src"]

[tool.pdoc]
modules = ["src"]
